--- a/Adversarial_BagNet_PyTorch.ipynb
+++ b/Adversarial_BagNet_PyTorch.ipynb
@@ -18,6 +18,11 @@
     "from PIL import Image\n",
     "import json\n",
     "import requests\n",
+    "import torchvision.models as models\n",
+    "import numpy as np\n",
+    "import foolbox\n",
+    "from foolbox.attacks import LBFGSAttack\n",
+    "from foolbox.criteria import TargetClassProbability\n",
     "\n",
     "import os "
    ]
@@ -198,44 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mk365/anaconda3/envs/bagnets/lib/python3.7/site-packages/foolbox/models/pytorch.py:62: UserWarning: The PyTorch model is in training mode and therefore might not be deterministic. Call the eval() method to set it in evaluation mode if this is not intended.\n",
-      "  'The PyTorch model is in training mode and therefore might'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "151 282\n"
-     ]
-    }
-   ],
-   "source": [
-    "import torchvision.models as models\n",
-    "import numpy as np\n",
-    "import foolbox\n",
-    "\n",
-    "# instantiate the model\n",
-    "resnet18 = bagnet8(pretrained=True)  # for CPU, remove cuda()\n",
-    "mean = np.array([0.485, 0.456, 0.406]).reshape((3, 1, 1))\n",
-    "std = np.array([0.229, 0.224, 0.225]).reshape((3, 1, 1))\n",
-    "model = foolbox.models.PyTorchModel(resnet18, bounds=(0, 1), num_classes=1000, preprocessing=(mean, std))\n",
-    "\n",
-    "image, label = foolbox.utils.imagenet_example(data_format='channels_first')\n",
-    "image = image / 255\n",
-    "print(np.argmax(model.predictions(image)), label)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -245,24 +213,15 @@
       "label 282\n",
       "predicted class 151\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mk365/anaconda3/envs/bagnets/lib/python3.7/site-packages/foolbox/attacks/base.py:129: UserWarning: Not running the attack because the original input is already misclassified and the adversarial thus has a distance of 0.\n",
-      "  warnings.warn('Not running the attack because the original input'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "adversarial class 151\n"
-     ]
     }
    ],
    "source": [
+    "# instantiate the model\n",
+    "resnet18 = bagnet8(pretrained=True)  # for CPU, remove cuda()\n",
+    "mean = np.array([0.485, 0.456, 0.406]).reshape((3, 1, 1))\n",
+    "std = np.array([0.229, 0.224, 0.225]).reshape((3, 1, 1))\n",
+    "model = foolbox.models.PyTorchModel(resnet18, bounds=(0, 1), num_classes=1000, preprocessing=(mean, std))\n",
+    "\n",
     "# get source image and label\n",
     "image, label = foolbox.utils.imagenet_example(data_format='channels_first')\n",
     "image = image / 255.  # because our model expects values in [0, 1]\n",
@@ -276,6 +235,23 @@
     "\n",
     "print('adversarial class', np.argmax(model.predictions(adversarial)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "label 282\n",
+      "predicted class 151\n",
+      "adversarial class 151\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
