apply attacks WIP

--- a/Adversarial_BagNet_PyTorch.ipynb
+++ b/Adversarial_BagNet_PyTorch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,7 @@
     "import foolbox\n",
     "from foolbox.attacks import LBFGSAttack\n",
     "from foolbox.criteria import TargetClassProbability\n",
+    "from foolbox.criteria import TargetClass\n",
     "import matplotlib.pyplot as plt\n",
     "import os "
    ]
@@ -203,47 +204,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mk365/anaconda3/envs/bagnets/lib/python3.7/site-packages/foolbox/models/pytorch.py:62: UserWarning: The PyTorch model is in training mode and therefore might not be deterministic. Call the eval() method to set it in evaluation mode if this is not intended.\n",
-      "  'The PyTorch model is in training mode and therefore might'\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "label 282\n",
-      "predicted class 151\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mk365/anaconda3/envs/bagnets/lib/python3.7/site-packages/foolbox/attacks/base.py:129: UserWarning: Not running the attack because the original input is already misclassified and the adversarial thus has a distance of 0.\n",
-      "  warnings.warn('Not running the attack because the original input'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "predicted class 151\n",
       "adversarial class 151\n"
      ]
     }
    ],
    "source": [
     "# instantiate the model\n",
-    "resnet18 = bagnet8(pretrained=True)  # for CPU, remove cuda()\n",
+    "bagnet = bagnet8(pretrained=True)  # for CPU, remove cuda()\n",
     "mean = np.array([0.485, 0.456, 0.406]).reshape((3, 1, 1))\n",
     "std = np.array([0.229, 0.224, 0.225]).reshape((3, 1, 1))\n",
-    "model = foolbox.models.PyTorchModel(resnet18, bounds=(0, 1), num_classes=1000, preprocessing=(mean, std))\n",
+    "model = foolbox.models.PyTorchModel(bagnet, bounds=(0, 1), num_classes=1000, preprocessing=(mean, std))\n",
     "\n",
     "# get source image and label\n",
     "image, label = foolbox.utils.imagenet_example(data_format='channels_first')\n",
@@ -253,7 +232,7 @@
     "print('predicted class', np.argmax(model.predictions(image)))\n",
     "\n",
     "# apply attack on source image\n",
-    "attack = foolbox.attacks.FGSM(model)\n",
+    "attack = foolbox.attacks.SaltAndPepperNoiseAttack(model)\n",
     "adversarial = attack(image, label)\n",
     "\n",
     "print('adversarial class', np.argmax(model.predictions(adversarial)))"
@@ -261,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
